Building solution base features and architecture (WIP).

--- a/src/Hyperar.HUM.UserInterface/App.axaml
+++ b/src/Hyperar.HUM.UserInterface/App.axaml
@@ -1,10 +1,24 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="Hyperar.HUM.UserInterface.App"
+             xmlns:local="using:Hyperar.HUM.UserInterface"
+             xmlns:sty="using:FluentAvalonia.Styling"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+    <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+
+    <Application.DataTemplates>
+
+        <local:ViewLocator />
+    </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme />
+
+        <StyleInclude Source="/Assets/Styles/Common.axaml" />
+
+        <StyleInclude Source="/Assets/Icons/Svg/Menu.axaml" />
+        <StyleInclude Source="/Assets/Icons/Svg/Miscellaneous.axaml" />
+        <StyleInclude Source="/Assets/Icons/Svg/Specialty.axaml" />
+
+        <sty:FluentAvaloniaTheme />
     </Application.Styles>
 </Application>
