Added functionality to list Senior Teams for a given User Profile. Removed unnecessary SVG icon and renamed 'UserProfileManagement' to 'UserProfilesIcon'. Temporarily removed main menu builder objects to re-design it. Modified Navigator to send the ViewType when raising TargetViewTypeChanged to avoid using a property. Updated all ViewModels to resume navigation on initialization completion. First iteration for TeamSelectionView and functionality done, still WIP. Updated MainWindow to improve MainMenu currently active view indicator.

--- a/src/Hyperar.HUM.UserInterface/MainWindow.axaml
+++ b/src/Hyperar.HUM.UserInterface/MainWindow.axaml
@@ -62,7 +62,7 @@
                     <ListBox Margin="0 0 -100 0"
                              Padding="0"
                              ItemsSource="{Binding MenuItems}"
-                             SelectedItem="{Binding SelectedItem}">
+                             Selection="{Binding SelectionModel}">
 
                         <ListBox.Styles>
 
