Re-done migrations. Added Series properties to SeniorTeam and updated related objects. Added new translations. Added themed resource dictionary. Added missing items from Main Menu and added Separator. Improved TeamSelectionView. Minor adjustments to views.

--- a/src/Hyperar.HUM.UserInterface/Assets/Styles/Common.axaml
+++ b/src/Hyperar.HUM.UserInterface/Assets/Styles/Common.axaml
@@ -7,6 +7,12 @@
 
     </Style>
 
+    <Style Selector="TextBlock.ValueTitle">
+
+        <Setter Property="FontWeight" Value="Bold" />
+
+    </Style>
+
     <Style Selector="PathIcon.MotherClubIcon">
 
         <Setter Property="Foreground" Value="#DD4140" />
