--- a/src/Hyperar.HUM.UserInterface/App.axaml
+++ b/src/Hyperar.HUM.UserInterface/App.axaml
@@ -24,4 +24,18 @@
 
     </Application.Styles>
 
+    <Application.Resources>
+
+        <ResourceDictionary>
+
+            <ResourceDictionary.MergedDictionaries>
+
+                <ResourceInclude  Source="/Assets/Resources/Common.axaml" />
+
+            </ResourceDictionary.MergedDictionaries>
+
+        </ResourceDictionary>
+
+    </Application.Resources>
+
 </Application>
