Added controls for selection views. Updated Nuget packages. Modified UserProfile model and control to include Country besides Manager.

--- a/src/Hyperar.HUM.UserInterface/App.axaml
+++ b/src/Hyperar.HUM.UserInterface/App.axaml
@@ -31,6 +31,8 @@
             <ResourceDictionary.MergedDictionaries>
 
                 <ResourceInclude  Source="/Assets/Resources/Common.axaml" />
+                <ResourceInclude  Source="/Controls/ManagerCard.axaml" />
+                <ResourceInclude  Source="/Controls/SeniorTeamCard.axaml" />
 
             </ResourceDictionary.MergedDictionaries>
 
