--- a/src/Hyperar.HUM.UserInterface/Assets/Styles/Common.axaml
+++ b/src/Hyperar.HUM.UserInterface/Assets/Styles/Common.axaml
@@ -7,7 +7,7 @@
 
     </Style>
 
-    <Style Selector="TextBlock.ValueTitle">
+    <Style Selector="TextBlock.Label">
 
         <Setter Property="FontWeight" Value="Bold" />
 
