--- a/src/Hyperar.HUM.UserInterface/Views/TeamSelectionView.axaml
+++ b/src/Hyperar.HUM.UserInterface/Views/TeamSelectionView.axaml
@@ -24,7 +24,8 @@
 
     </UserControl.Resources>
 
-    <ItemsControl ItemsSource="{Binding SeniorTeams}">
+    <ItemsControl ItemsSource="{Binding SeniorTeams}"
+                  Grid.IsSharedSizeScope="True">
 
         <ItemsControl.ItemsPanel>
 
